# Crypto-project

./: .env.exemple  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt
_data/: users.json
_data/ca/: ca_cert.pem  ca_key.pem  subca_cert.pem  subca_key.pem
_data/storage/AlvaroVillena2001@gmail.com/: practica-1.pdf.enc  practica-1.pdf.meta.json
_data/storage/alvarovillena@gmail.com/: plano_esp-2.pdf.enc  plano_esp-2.pdf.meta.json
_data/storage/franjuradobaste@prueba.com/: 83.png.enc  83.png.meta.json  Enunciado_practica_25_26.docx.pdf.enc  Enunciado_practica_25_26.docx.pdf.meta.json  practica-1.pdf.enc  practica-1.pdf.meta.json
_data/storage/j@gmail.com/: Comunicaciones Moviles GTT - calendario 2025-26 alumnos(7).docx.enc  Comunicaciones Moviles GTT - calendario 2025-26 alumnos(7).docx.meta.json
_data/storage/pepe@gmail.com/: Práctica 3b_Decisiones de inversión.pdf.enc  Práctica 3b_Decisiones de inversión.pdf.meta.json
api/: __init__.py  pki.py  services.py
app_streamlit/: Home.py
app_streamlit/.streamlit/: config.toml
app_streamlit/pages/: 1_Registro_y_Login.py  2_Subir_y_Cifrar.py  3_Descargar_y_Descifrar.py
core/: __init__.py  auth.py  config.py  crypto_kdf.py  crypto_sign.py  crypto_sym.py  drive.py  kdf.py  models.py  password_policy.py  storage.py
crypto_drive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/: docker-compose.yml
pages/: 4_drive.py
tests/: conftest.py  test_auth.py  test_auth_flow.py  test_crypto_sign.py  test_crypto_sym.py  test_password_policy.py  test_pki.py  test_storage.py
(+2 files in other folders)
